MGP v 1.12.4 5/30/25
-------------------
  * fixed getTestNumbers() to only look for billable IgG tests
  * added patient ITL to log before execute MGP starts - in case failure occurs during typing, it'll be captured in Splunk
  * added tryCatch during getTyping + a reactive for assessing if there was an exception during that block. if yes, output
  error message and enable download log instead of allowing app to crash
  * removed extraneous textOutput('p_itl') in ui.R

MGP v 1.12.3 3/25/25
-------------------
  * made function for determining if an allele is NMDP and replaced code accordingly
  * fixed issue in calcDSA where if an NMDP allele ended with a 'P' or 'L', the 
  suffix variant was being removed in the code, causing an incorrect NMDP code to 
  be evaluated. revised logic to if the allele ends with a 'P' or 'L' and is not
  an NMDP allele
  * applied the same logic for skipping 'Q' alleles
  * fixed issue of executeMGPServer not running properly if there is a novel allele;
  there were missing parameters for donor_filter and recipient_filter

MGP v 1.12.2 2/11/25
-------------------
  * revised surrogate logic to rely on sero tables converted from KO's sero 
  conversion tables -- see workflow for more details
  * added new sero tables for HLA-A, B, C, DRB1/3/4/5, and DQB1 (v 3.58.0)
  * updated sero tables for HLA-DPA1, DPB1, and DQA1 (v 3.58.0)
  * added 'P' suffix variant to sub out for DSA anlysis if being evaluated 
  * added logic to accommodate DRB3 and DRB5 serological equivalencies with 
  proposed nomenclature
  * took out adding recipient null alleles to DSA determination
  * in TCE eval - if recipient and/or donor has a NULL variant allele, replace it
  with the non-NULL allele
  
MGP v 1.12.1 2/4/25
-------------------
  * added logic to filter out the following alleles if the antigen group is used
  as a surrogate, since these alleles are serologically distinct
    A2: A*02:03, A*02:10
    A24: A*24:03
    B35: B*35:12, B*35:02