@@ -1,6 +1,6 @@
 #server
 #by: Livia Tran
-#v1.12.4
+#v1.12.5
 
 suppressPackageStartupMessages(library(odbc))
 suppressPackageStartupMessages(library(shinyjs))
@@ -228,7 +228,14 @@ server <- function(input, output, session) {
     error = function(e){
       hide_spinner()
       lgr$fatal(e)
-      main$error<-HTML(sprintf('Match Grade evaluations for recipient ITL %s <b><span style=color:red;>failed</b></span>. Please download the log and e-mail it to <b>liv.tran@stanford.edu</b> to troubleshoot.', patient$itl))
+      
+      message<-'Match Grade evaluations for recipient ITL %s %s Please download the log and e-mail it to %s to troubleshoot.'
+      
+      email<-getMaintainerEmail()
+      
+      lgr$info(sprintf(message, patient$itl, 'failed. ', email))
+      main$error<-HTML(sprintf(message, patient$itl, ' <b><span style=color:red;>failed</b></span>.', sprintf('<b>%s</b>', email)))
+
       }
   )
     
